--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculator</title>
+  <title>Caje's Calculator</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="calculator">
-    <input type="text" id="display" disabled>
+  <div class='calculator'>
+    <input type='text' id='display' disabled>
     <div class="buttons">
-      <button onclick="clearDisplay()">C</button>
+      <button onclick="clearDisplay()">Clear</button>
       <button onclick="appendValue('7')">7</button>
       <button onclick="appendValue('8')">8</button>
       <button onclick="appendValue('9')">9</button>
