--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Caje's Calculator</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js"></script>
 </head>
 <body>
-  <div class='calculator'>
+  <div class='the calculator'>
     <input type='text' id='display' disabled>
-    <div class="buttons">
       <button onclick="clearDisplay()">Clear</button>
       <button onclick="appendValue('1')">1</button>
       <button onclick="appendValue('2')">2</button>
@@ -30,8 +30,6 @@
       <button onclick="appendValue(')')">)</button>
       <button onclick="squareRoot()">√</button>
       <button onclick="calculate()">=</button>
-    </div>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
